Modification du .gitignore, ajout des paramètres de PyCharm en ignorés
Signed-off-by: Aeris One <aeris@e.email>

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Éviter la mise en ligne du token
 config.py
 
+# PyCharm settings
+.idea/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
